try to squash da margin bug

--- a/main.css
+++ b/main.css
@@ -8,9 +8,9 @@
     height: 80px;
     width: 80px;
     border-radius: 150px;
+    margin-top: 50px;
     display: inline-block;
     margin-left: -20px;
-    margin-top: 50px;
 }
 
 
@@ -31,5 +31,5 @@
 }
 
 .dance-segment {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
